--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -33,6 +33,7 @@ jobs:
 
       - name: Build and Push
         run: |
+          echo "Original SHA: $GITHUB_SHA" 
           docker build -t $DOCKER_IMAGE -t iceteagreen/file-storage:latest .
           docker push $DOCKER_IMAGE
           docker push iceteagreen/file-storage:latest
