--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -8,7 +8,7 @@ env:
   VPS_IP: ${{ secrets.VPS_IP }}
   VPS_USER: ${{ secrets.VPS_USER }}
   SSH_KEY: ${{ secrets.VPS_SSH_KEY }}
-  DOCKER_IMAGE: iceteagreen/file-storage:$GITHUB_SHA
+  DOCKER_IMAGE: iceteagreen/file-storage:${{ github.run_id }}
 
 jobs:
   deploy:
@@ -33,7 +33,7 @@ jobs:
 
       - name: Build and Push
         run: |
-          echo "Original SHA: $GITHUB_SHA" 
+          echo "Dicker_img: $DOCKER_IMAGE" 
           docker build -t $DOCKER_IMAGE -t iceteagreen/file-storage:latest .
           docker push $DOCKER_IMAGE
           docker push iceteagreen/file-storage:latest
