--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -42,9 +42,15 @@ jobs:
         with:
           ssh-private-key: ${{ secrets.VPS_SSH_KEY }}
 
+      - name: Setup SSH
+        run: |
+          mkdir -p ~/.ssh
+          ssh-keyscan -H $VPS_IP >> ~/.ssh/known_hosts
+          chmod 600 ~/.ssh/known_hosts
+
       - name: Deploy
         run: |
-          ssh $VPS_USER@$VPS_IP <<EOF
+          ssh -T $VPS_USER@$VPS_IP <<'EOF'
           docker pull $DOCKER_IMAGE
           docker compose -f /home/deploy/docker-compose.prod.yml up -d
           EOF
