--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,11 +31,11 @@ jobs:
           username: ${{ secrets.DOCKER_HUB_USERNAME }}
           password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
 
-      - name: Build and Push
-        run: |
-          docker build -t $DOCKER_IMAGE -t iceteagreen/file-storage:latest .
-          docker push $DOCKER_IMAGE
-          docker push iceteagreen/file-storage:latest
+#      - name: Build and Push
+#        run: |
+#          docker build -t $DOCKER_IMAGE -t iceteagreen/file-storage:latest .
+#          docker push $DOCKER_IMAGE
+#          docker push iceteagreen/file-storage:latest
 
       # Deployment
       - uses: webfactory/ssh-agent@v0.7.0
@@ -52,5 +52,5 @@ jobs:
         run: |
           ssh -T $VPS_USER@$VPS_IP <<'EOF'
           docker pull $DOCKER_IMAGE
-          docker compose -f /home/deploy/docker-compose.prod.yml up -d
+          docker-compose -f /home/deploy/docker-compose.prod.yml up -d
           EOF
