--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,11 +31,11 @@ jobs:
           username: ${{ secrets.DOCKER_HUB_USERNAME }}
           password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
 
-#      - name: Build and Push
-#        run: |
-#          docker build -t $DOCKER_IMAGE -t iceteagreen/file-storage:latest .
-#          docker push $DOCKER_IMAGE
-#          docker push iceteagreen/file-storage:latest
+      - name: Build and Push
+        run: |
+          docker build -t $DOCKER_IMAGE -t iceteagreen/file-storage:latest .
+          docker push $DOCKER_IMAGE
+          docker push iceteagreen/file-storage:latest
 
       # Deployment
       - uses: webfactory/ssh-agent@v0.7.0
@@ -48,9 +48,15 @@ jobs:
           ssh-keyscan -H $VPS_IP >> ~/.ssh/known_hosts
           chmod 600 ~/.ssh/known_hosts
 
+      - name: Transfer Compose File
+        run: |
+          scp -o StrictHostKeyChecking=no \
+              docker-compose.prod.yml \
+              $VPS_USER@$VPS_IP:/home/file-storage/
+
       - name: Deploy
         run: |
           ssh -T $VPS_USER@$VPS_IP <<'EOF'
           docker pull $DOCKER_IMAGE
-          docker-compose -f /home/deploy/docker-compose.prod.yml up -d
+          docker-compose -f /home/file-storage/docker-compose.prod.yml up -d
           EOF
