--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -42,6 +42,10 @@ jobs:
         with:
           ssh-private-key: ${{ secrets.VPS_SSH_KEY }}
 
+      - name: Debug Image Name
+        run:
+          echo "Docker image: $DOCKER_IMAGE"
+
       - name: Setup SSH
         run: |
           mkdir -p ~/.ssh
@@ -56,8 +60,9 @@ jobs:
               $VPS_USER@$VPS_IP:/home/file-storage/
 
       - name: Deploy
-        run: |
-          ssh -T $VPS_USER@$VPS_IP <<'EOF'
+        run: |  
+          ssh -T $VPS_USER@$VPS_IP <<EOF
           docker pull $DOCKER_IMAGE
-          docker-compose -f /home/file-storage/docker-compose.prod.yml up -d
+          cd /home/file-storage
+          docker-compose -f docker-compose.prod.yml up -d
           EOF
