--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -43,7 +43,7 @@ jobs:
           ssh-private-key: ${{ secrets.VPS_SSH_KEY }}
 
       - name: Debug Image Name
-        run:
+        run: |
           echo "Docker image: $DOCKER_IMAGE"
 
       - name: Setup SSH
