--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -56,6 +56,7 @@ jobs:
         run: |
           ssh -T $VPS_USER@$VPS_IP "mkdir -p /home/file-storage"
           scp -o StrictHostKeyChecking=no \
+              Dockerfile \
               docker-compose.prod.yml \
               $VPS_USER@$VPS_IP:/home/file-storage/
 
