--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -2,7 +2,7 @@ version: '3.8'
 
 services:
   app:
-    build: .  # Uses root Dockerfile
+    image: iceteagreen/file-storage:latest  # Use your pushed image
     ports:
       - "8080:8080"
     environment:
@@ -10,7 +10,7 @@ services:
       SPRING_DATASOURCE_URL: jdbc:postgresql://db:5432/file-storage
       SPRING_DATASOURCE_USERNAME: admin
       SPRING_DATASOURCE_PASSWORD: admin
-      ROOT_PATH: /storage  # This will override the Dockerfile ENV
+      ROOT_PATH: /storage
     volumes:
       - file-storage-volume:/storage
     depends_on:
