--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,13 +31,11 @@ jobs:
           username: ${{ secrets.DOCKER_HUB_USERNAME }}
           password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
 
-      - name: Tag and Push
-        uses: docker/build-push-action@v5
-        with:
-          tags: |
-            $DOCKER_IMAGE
-            iceteagreen/file-storage:latest
-          push: true
+      - name: Build and Push
+        run: |
+          docker build -t $DOCKER_IMAGE -t iceteagreen/file-storage:latest .
+          docker push $DOCKER_IMAGE
+          docker push iceteagreen/file-storage:latest
 
       # Deployment
       - uses: webfactory/ssh-agent@v0.7.0
@@ -64,7 +62,7 @@ jobs:
       - name: Deploy
         run: |  
           ssh -T $VPS_USER@$VPS_IP <<EOF
-          docker pull $DOCKER_IMAGE
+          docker pull iceteagreen/file-storage:latest
           cd /home/file-storage
           docker compose -f docker-compose.prod.yml down  # Remove old containers
           docker compose -f docker-compose.prod.yml up -d --force-recreate  # Create new ones
