--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -8,21 +8,14 @@ env:
   VPS_IP: ${{ secrets.VPS_IP }}
   VPS_USER: ${{ secrets.VPS_USER }}
   SSH_KEY: ${{ secrets.VPS_SSH_KEY }}
-  DOCKER_IMAGE: iceteagreen/file-storage:${{ github.run_id }}
+  PROJECT_NAME: file-storage
+  DOCKER_IMAGE: iceteagreen/$PROJECT_NAME:${{ github.run_id }}
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-
-#      # Build Java app (only needed for tests)
-#      - uses: actions/setup-java@v4
-#        with:
-#          distribution: 'temurin'
-#          java-version: '17'
-#
-#      - run: mvn package -DskipTests
 
       # Docker steps
       - name: Login to Docker Hub
@@ -33,8 +26,8 @@ jobs:
 
       - name: Build and Push
         run: |
-          docker build -t $DOCKER_IMAGE -t iceteagreen/file-storage:latest .
-          docker push iceteagreen/file-storage:latest
+          docker build -t $DOCKER_IMAGE -t iceteagreen/$PROJECT_NAME:latest .
+          docker push iceteagreen/$PROJECT_NAME:latest
 
       # Deployment
       - uses: webfactory/ssh-agent@v0.7.0
@@ -49,16 +42,16 @@ jobs:
 
       - name: Transfer Compose File
         run: |
-          ssh -T $VPS_USER@$VPS_IP "mkdir -p /home/file-storage"
+          ssh -T $VPS_USER@$VPS_IP "mkdir -p /home/$PROJECT_NAME"
           scp -o StrictHostKeyChecking=no \
               docker-compose.prod.yml \
-              $VPS_USER@$VPS_IP:/home/file-storage/
+              $VPS_USER@$VPS_IP:/home/$PROJECT_NAME/
 
       - name: Deploy
         run: |  
           ssh -T $VPS_USER@$VPS_IP <<EOF
-          docker pull iceteagreen/file-storage:latest
-          cd /home/file-storage
+          docker pull iceteagreen/$PROJECT_NAME:latest
+          cd /home/$PROJECT_NAME
           docker compose -f docker-compose.prod.yml down  # Remove old containers
           docker compose -f docker-compose.prod.yml up -d --force-recreate  # Create new ones
           EOF
