some adjustments + reconnect retries

--- a/src/main/resources/application-docker.yml
+++ b/src/main/resources/application-docker.yml
@@ -26,6 +26,8 @@ spring:
     locations: classpath:db/migration
     baseline-on-migrate: true
     clean-disabled: true
+    connect-retries: 50           # Number of retries
+    connect-retries-interval: 5s
 grpc:
   server:
     port: 9090
