avoid large logs

--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -19,6 +19,11 @@ services:
         condition: service_healthy
     networks:
       - grpc-network-1
+    logging:
+      driver: json-file
+      options:
+        max-size: "10m"
+        max-file: "3"
   db:
     image: postgres:15-alpine
     healthcheck:
@@ -36,6 +41,11 @@ services:
       - "5432:5432"
     networks:
       - grpc-network-1
+    logging:
+      driver: json-file
+      options:
+        max-size: "10m"
+        max-file: "3"
 networks:
   grpc-network-1:
     external: true
